clap_derive/tests/ui/struct_parse.stderr
error: `parse` attribute is only allowed on fields
  --> $DIR/struct_parse.rs:12:24
   |
12 | #[clap(name = "basic", parse(from_str))]
   |                        ^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/struct_parse.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
